--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<mybatis.version>3.3.1</mybatis.version>
-		<mybatis.spring.version>1.2.4</mybatis.spring.version>
+		<mybatis.version>3.4.1</mybatis.version>
+		<mybatis.spring.version>1.3.0</mybatis.spring.version>
 	</properties>
 
 	<dependencies>
@@ -55,7 +55,7 @@
 			<artifactId>spring-integration-core</artifactId>
 			<version>4.3.4.RELEASE</version>
 		</dependency>
-		<!-- mysql and mybatis -->
+		<!-- mysql -->
 
 		<dependency>
 			<groupId>mysql</groupId>
@@ -95,7 +95,13 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- logback -->
+		<!-- logging -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
@@ -104,7 +110,7 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
-			<version>1.1.2</version>
+			<version>1.1.7</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
