--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,10 @@
-spring:
-    datasource:
+mysql:
         name: test
-        url: jdbc:mysql://localhost:3306/test
+        url: jdbc:mysql://localhost:3306/test?useUnicode=true&charaterEncoding=utf-8
         username: root
         password:
-        type: com.alibaba.druid.pool.DruidDataSource
-        driver-class-name: com.mysql.jdbc.Driver
+        type: com.zaxxer.hikari.HikariDataSource
+        driver.class: com.mysql.jdbc.Driver
         filters: stat
         maxActive: 20
         initialSize: 1
@@ -19,6 +18,8 @@ spring:
         testOnReturn: false
         poolPreparedStatements: true
         maxOpenPreparedStatements: 20
+        maxPoolSize: 10
+        idleTimeout: 5
 mybatis: 
   mapperLocations: classpath:mapper/*.xml
   typeAliasesPackage: com.ww.dao
