--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,8 @@
 		</dependency>
 
 
+
+
 		<!--Mybatis -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
@@ -123,6 +125,13 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka-server</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna</artifactId>
+			<version>4.2.2</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
