--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,13 @@
 			<artifactId>jna</artifactId>
 			<version>4.2.2</version>
 		</dependency>
+
+		<!-- SWagger2 -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.2.2</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
