--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,11 @@
 		</dependency>
 		<!-- redis -->
 		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-redis</artifactId>
 		</dependency>
