实现了kafka的消息发布 订阅

--- a/conf/dev/kafka.properties
+++ b/conf/dev/kafka.properties
@@ -1,5 +1,6 @@
-kafka.broker.address=localhost:9092 
-zookeeper.connect=localhost:2181
-topic=si.topic
+kafka.broker.address=127.0.0.1:9092 
+zookeeper.connect=127.0.0.1:2181
+kafka.defaulttopic=mytopic
 messageKey=si.key
 kafka.group=will_group
+kafka.topic=will_topic
