--- a/conf/dev/elasticsearch.properties
+++ b/conf/dev/elasticsearch.properties
@@ -1,3 +1,4 @@
-elasticsearch.host = localhost
+elasticsearch.host = localhost:9300
  # if you use you local elasticsearch host
 elasticsearch.port = 9300
+elasticsearch.cluster.name=nocluster
