--- a/pom.xml
+++ b/pom.xml
@@ -197,7 +197,13 @@
 			<artifactId>jsonevent-layout</artifactId>
 			<version>1.7</version>
 		</dependency>
-
+		<!-- json -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.20</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-logging</artifactId>
