--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 
+server.port=9000
+
 mysql.name=test
 mysql.url=jdbc:mysql://localhost:3306/test?useUnicode=true&charaterEncoding=utf-8
 mysql.username=root
@@ -29,3 +31,12 @@ kafka.broker.address=localhost:9092
 kafka.zookeeper.connect=localhost:2181
 kafka.topic=si.topic
 kafka.messageKey=si.key
+
+
+
+service.count.one=1
+service.count.two=2
+service.count.three=3
+service.count.four=4
+
+
